Se agregaron las imagenes y se termino la maquetacion para empezar el diseno

--- a/index.html
+++ b/index.html
@@ -1,11 +1,270 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es"></html>
 <head>
-	<meta charset="UTF-8">
-	<title>Platzi Blog</title>
-	<link rel="stylesheet" href="css/estilos.css">
+  <meta charset="UTF-8">
+  <title>Blog Platzi</title>
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-	Hola
+  <header class="cabezera">
+    <nav class="menu">
+      <figure class="logo"><img src="img/platzi-logo.png" alt="imagen"></figure>
+      <ul class="navegacion">
+        <li><a href="#">Cursos</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Horarios</a></li>
+        <li><a href="#">Live</a></li>
+      </ul><a class="boton-menu" href="#"></a>
+    </nav>
+  </header>
+  <section class="portada">
+    <div class="contenedor">
+      <form class="buscador">
+        <input type="text" name="" placeholder="Buscar ...">
+        <input type="submit" value="P">
+      </form>
+      <div class="portada-inicio">
+        <div class="recomendacion">
+          <h1>Consejos que aumentarán tu efectividad al trabajar desde casa</h1>
+          <hr>
+          <div class="izquierda"><img src="img/persona.png" alt="persona">
+            <p class="nombre">Leticia Ferrer Mur</p>
+          </div>
+          <div class="derecha">
+            <p class="fecha">abril 15 2016</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="publicaciones">
+    <div class="contenedor">
+      <div class="divisiones">
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-1.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>Cómo definir un Namespace en C#</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Juan Castro Lurita</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">abril 13 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-2.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>Todo lo que Facebook anunció en F8</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">winiberto</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">abril 12 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-3.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>Lo nuevo en Android Studio 2.0</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Uriel Ramirez</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">abril 12 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-4.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>Lo que tienes que saber sobre React 15</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Leonidas Esteban</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">abril 11 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-5.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>Paso a paso: cómo trabajar con JSON en Go</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Juan Castro Lurita</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">abril 8 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-6.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>5 libros que deberías leer para aprender diseño de Producto</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Luis "Lulo" Lóperz Mendez</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">abril 7 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-7.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>Platzi Stream cambia de horario esta semana</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Anna Heim</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">abril 5 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-8.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>5 recomendaciones para proteger datos personales en tu negocio</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Germán Realpe Delgado</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">marzo 28 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-9.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>10 Gemas para desarrollar con Ruby on Rails</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Juan Castro Lurita</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">marzo 17 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-10.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>Lo que tienes que saber sobre Google Analytics 360 Suite</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Anna Heim</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">marzo 16 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-11.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>Primeras impresiones de Adobe Experience Design</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Jennifer López</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">marzo 15 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-12.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>El origen de Ruby on Rails, el framework orientado a la felicidad</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Yare Saavedra</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">marzo 14 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-13.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>Aprende a crear la inconografía perfecta</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Jennifer Lópes</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">marzo 11 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-14.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>Tips de marketing digital para músicos</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombre">Armando Sarabia</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">marzo 6 2016</p>
+            </div>
+          </div>
+        </div>
+        <div class="division">
+          <div class="division-header"><img src="img/imagen-16.png" alt="imagen"></div>
+          <div class="division-body">
+            <h2>Agrega 3D Touch y Force Touch a tus proyectos web</h2>
+          </div>
+          <div class="division-footer">
+            <div class="derecha">
+              <div class="nombreUriel">Ramirez</div>
+            </div>
+            <div class="izquierda">
+              <p class="fecha">marzo 3 2016</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer class="footer">
+        <div class="contenedor">
+          <ul class="paginacion">
+            <li>Página 1 de 23</li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">Siguiente</a></li>
+            <li><a href="#">Última página</a></li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+  </section>
 </body>
-</html>
