--- a/index.html
+++ b/index.html
@@ -2,53 +2,52 @@
 <html lang="es"></html>
 <head>
   <meta charset="UTF-8">
-  <title>Blog Platzi</title>
+  <title>Blog Platzi</title><link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded|Lato|Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
   <header class="cabezera">
     <nav class="menu">
-      <figure class="logo"><img src="img/platzi-logo.png" alt="imagen"></figure>
+      <figure class="logo"><img src="img/platzi-logo.png" alt="imagen" width="86"></figure>
       <ul class="navegacion">
         <li><a href="#">Cursos</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a class="active" href="#">Blog</a></li>
         <li><a href="#">FAQ</a></li>
         <li><a href="#">Horarios</a></li>
-        <li><a href="#">Live</a></li>
-      </ul><a class="boton-menu" href="#"></a>
+        <li class="ultimo"><a href="#">Live</a></li><a class="boton-menu" href="#">Inicia sesión</a>
+      </ul>
     </nav>
   </header>
   <section class="portada">
     <div class="contenedor">
       <form class="buscador">
         <input type="text" name="" placeholder="Buscar ...">
-        <input type="submit" value="P">
+        <button type="submit"><span class="fa fa-search"></span></button>
       </form>
-      <div class="portada-inicio">
-        <div class="recomendacion">
+      <div class="portada-inicio"><a class="recomendacion" href="#">
           <h1>Consejos que aumentarán tu efectividad al trabajar desde casa</h1>
-          <hr>
-          <div class="izquierda"><img src="img/persona.png" alt="persona">
-            <p class="nombre">Leticia Ferrer Mur</p>
-          </div>
-          <div class="derecha">
-            <p class="fecha">abril 15 2016</p>
-          </div>
-        </div>
-      </div>
+          <div class="abajo">
+            <div class="izquierda"><img src="img/persona.png" alt="persona">
+              <p class="nombre">Leticia Ferrer Mur</p>
+            </div>
+            <div class="derecha">
+              <p class="fecha">abril 15 2016</p>
+            </div>
+          </div></a></div>
     </div>
   </section>
   <section class="publicaciones">
     <div class="contenedor">
       <div class="divisiones">
         <div class="division">
-          <div class="division-header"><img src="img/imagen-1.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-1.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>Cómo definir un Namespace en C#</h2>
+            <h2><a href="#">Cómo definir un Namespace en C#</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Juan Castro Lurita</div>
+              <p class="nombre">Juan Castro Lurita</p>
             </div>
             <div class="izquierda">
               <p class="fecha">abril 13 2016</p>
@@ -56,13 +55,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-2.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-2.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>Todo lo que Facebook anunció en F8</h2>
+            <h2><a href="#">Todo lo que Facebook anunció en F8</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">winiberto</div>
+              <p class="nombre">winiberto</p>
             </div>
             <div class="izquierda">
               <p class="fecha">abril 12 2016</p>
@@ -70,13 +69,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-3.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-3.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>Lo nuevo en Android Studio 2.0</h2>
+            <h2><a href="#">Lo nuevo en Android Studio 2.0</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Uriel Ramirez</div>
+              <p class="nombre">Uriel Ramirez</p>
             </div>
             <div class="izquierda">
               <p class="fecha">abril 12 2016</p>
@@ -84,13 +83,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-4.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-4.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>Lo que tienes que saber sobre React 15</h2>
+            <h2><a href="#">Lo que tienes que saber sobre React 15</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Leonidas Esteban</div>
+              <p class="nombre">Leonidas Esteban</p>
             </div>
             <div class="izquierda">
               <p class="fecha">abril 11 2016</p>
@@ -98,13 +97,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-5.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-5.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>Paso a paso: cómo trabajar con JSON en Go</h2>
+            <h2><a href="#">Paso a paso: cómo trabajar con JSON en Go</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Juan Castro Lurita</div>
+              <p class="nombre">Juan Castro Lurita</p>
             </div>
             <div class="izquierda">
               <p class="fecha">abril 8 2016</p>
@@ -112,13 +111,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-6.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-6.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>5 libros que deberías leer para aprender diseño de Producto</h2>
+            <h2><a href="#">5 libros que deberías leer para aprender diseño de Producto</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Luis "Lulo" Lóperz Mendez</div>
+              <p class="nombre">Luis "Lulo" Lóperz Mendez</p>
             </div>
             <div class="izquierda">
               <p class="fecha">abril 7 2016</p>
@@ -126,13 +125,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-7.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-7.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>Platzi Stream cambia de horario esta semana</h2>
+            <h2><a href="#">Platzi Stream cambia de horario esta semana</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Anna Heim</div>
+              <p class="nombre">Anna Heim</p>
             </div>
             <div class="izquierda">
               <p class="fecha">abril 5 2016</p>
@@ -140,13 +139,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-8.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-8.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>5 recomendaciones para proteger datos personales en tu negocio</h2>
+            <h2><a href="#">5 recomendaciones para proteger datos personales en tu negocio</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Germán Realpe Delgado</div>
+              <p class="nombre">Germán Realpe Delgado</p>
             </div>
             <div class="izquierda">
               <p class="fecha">marzo 28 2016</p>
@@ -154,13 +153,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-9.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-9.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>10 Gemas para desarrollar con Ruby on Rails</h2>
+            <h2><a href="#">10 Gemas para desarrollar con Ruby on Rails</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Juan Castro Lurita</div>
+              <p class="nombre">Juan Castro Lurita</p>
             </div>
             <div class="izquierda">
               <p class="fecha">marzo 17 2016</p>
@@ -168,13 +167,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-10.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-10.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>Lo que tienes que saber sobre Google Analytics 360 Suite</h2>
+            <h2><a href="#">Lo que tienes que saber sobre Google Analytics 360 Suite</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Anna Heim</div>
+              <p class="nombre">Anna Heim</p>
             </div>
             <div class="izquierda">
               <p class="fecha">marzo 16 2016</p>
@@ -182,13 +181,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-11.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-11.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>Primeras impresiones de Adobe Experience Design</h2>
+            <h2><a href="#">Primeras impresiones de Adobe Experience Design</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Jennifer López</div>
+              <p class="nombre">Jennifer López</p>
             </div>
             <div class="izquierda">
               <p class="fecha">marzo 15 2016</p>
@@ -196,13 +195,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-12.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-12.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>El origen de Ruby on Rails, el framework orientado a la felicidad</h2>
+            <h2><a href="#">El origen de Ruby on Rails, el framework orientado a la felicidad</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Yare Saavedra</div>
+              <p class="nombre">Yare Saavedra</p>
             </div>
             <div class="izquierda">
               <p class="fecha">marzo 14 2016</p>
@@ -210,13 +209,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-13.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-13.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>Aprende a crear la inconografía perfecta</h2>
+            <h2><a href="#">Aprende a crear la inconografía perfecta</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Jennifer Lópes</div>
+              <p class="nombre">Jennifer Lópes</p>
             </div>
             <div class="izquierda">
               <p class="fecha">marzo 11 2016</p>
@@ -224,13 +223,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-14.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-14.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>Tips de marketing digital para músicos</h2>
+            <h2><a href="#">Tips de marketing digital para músicos</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombre">Armando Sarabia</div>
+              <p class="nombre">Armando Sarabia</p>
             </div>
             <div class="izquierda">
               <p class="fecha">marzo 6 2016</p>
@@ -238,13 +237,13 @@
           </div>
         </div>
         <div class="division">
-          <div class="division-header"><img src="img/imagen-16.png" alt="imagen"></div>
+          <div class="division-header"><a href="#"><img src="img/imagen-16.png" alt="imagen"></a></div>
           <div class="division-body">
-            <h2>Agrega 3D Touch y Force Touch a tus proyectos web</h2>
+            <h2><a href="#">Agrega 3D Touch y Force Touch a tus proyectos web</a></h2>
           </div>
           <div class="division-footer">
             <div class="derecha">
-              <div class="nombreUriel">Ramirez</div>
+              <p class="nombreUriel">Ramirez</p>
             </div>
             <div class="izquierda">
               <p class="fecha">marzo 3 2016</p>
@@ -256,12 +255,12 @@
         <div class="contenedor">
           <ul class="paginacion">
             <li>Página 1 de 23</li>
-            <li><a href="#">1</a></li>
+            <li><a class="active" href="#">1</a></li>
             <li><a href="#">2</a></li>
             <li><a href="#">3</a></li>
             <li><a href="#">4</a></li>
-            <li><a href="#">Siguiente</a></li>
-            <li><a href="#">Última página</a></li>
+            <li><a href="#">Siguiente <span class='fa fa-angle-right'></span></a></li>
+            <li><a href="#">Última página <span class='fa fa-angle-right'></span><span class='fa fa-angle-right'></span></a></li>
           </ul>
         </div>
       </footer>
